@@ -1,5 +1,9 @@
 0.7.5
 =====
+2009-10-22
+ * added night statistic in imgproc - night_good,..
+ * added last good image to imgproc
+
 2009-09-22
  * simplified the heating algorith of aag cloud/rain sensor
  * updated the man page
